Makes GridLayout honor minimum size

When GridLayout is given less space than the preferred size it
previously shrunk all columns marked as resizable, with no concern for
the minimum. This patch makes GridLayout bound the shrinking by the
minimum size. The minimum size is considered only for Views whose
preferred width was not explicitly specified and the containing columns
are resizable (resize_percent > 0) and don't have a fixed width.

BUG=761767
TEST=covered by tests

Change-Id: I00d501c27e2af229c8a161b6f6d3643f084fe055